fix chatroom done, to repair as well message content going out of div when too long text

--- a/src/components/ChatRoom/Messages/messages.scss
+++ b/src/components/ChatRoom/Messages/messages.scss
@@ -1,131 +1,90 @@
 @import "src/styles/vars";
 
-// ::-webkit-scrollbar-thumb {
-//   border-radius: 10px;
-// }
-
 .messages {
   height: 80vh;
-  overflow: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
-  scrollbar-width: 2em;
   position: relative;
   scrollbar-color: $eventColorBlue $primaryColorLight;
   color: $textColor;
+  scroll-behavior: smooth;
+  padding: 1rem;
+  // background: repeating-linear-gradient(
+  //   45deg,
+  //   $primaryColor,
+  //   $primaryColor 10px,
+  //   $primaryColorVeryLight 10px,
+  //   $primaryColorVeryLight 30px
+  // );
+}
 
-  & .message {
-    height: 3rem;
-    overflow-wrap: break-word;
-    font-size: 0.8em;
+.message {
+  height: auto;
+  overflow-wrap: break-word;
+  font-size: 0.8em;
+  align-self: flex-start;
+  margin-bottom: 0.2rem;
+  max-width: 100%;
 
-    @media (min-width: $sm) {
-      font-size: 1.1em;
+  @media (min-width: $sm) {
+    font-size: 1.1em;
+  }
+
+  &-author {
+    padding-left: 1rem;
+    margin-bottom: 0.5rem;
+    color: $eventColorBlue;
+    //animation: grow 0.4s cubic-bezier(0.36, 1.59, 0.89, 1.1);
+  }
+
+  &-content {
+    padding: 0.8rem;
+    border-radius: 0.8rem;
+    border: $eventColorBlue 0.1rem solid;
+    background-color: $primaryColorLight;
+    animation: grow 0.4s cubic-bezier(0.36, 1.59, 0.89, 1.1);
+    padding: 1rem;
+    display: inline-block;
+    max-width: 80%;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 2rem;
+      bottom: 100%;
+      // background-color: $eventColorBlue;
+      border-bottom: 10px solid $eventColorBlue;
+      border-right: 10px solid transparent;
     }
+  }
 
-    &-author {
-      padding-left: 1rem;
-      color: $secondaryColor;
-    }
+  &--not-mine {
+    text-align: right;
 
-    &-content {
-      padding: 0.8rem;
-      border-radius: 0.8rem;
-      border: $eventColorBlue 0.1rem solid;
-      background-color: $primaryColorLight;
-      animation: grow 0.4s cubic-bezier(0.36, 1.59, 0.89, 1.1);
+    .message-content {
+      display: inline-block;
+      max-width: 80%;
+      background-color: $eventColorBlue;
+      color: $eventColorPurple;
 
-      // &::after {
-      //   content: '';
-      //   position: absolute;
-      //   top: 0;
-      //   left: 50%;
-      //   width: 0;
-      //   height: 0;
-      //   border: 20px solid transparent;
-      //   border-bottom-color: #00aabb;
-      //   border-top: 0;
-      //   border-left: 0;
-      //   margin-left: -10px;
-      //   margin-top: -20px;
-      // }
-    }
-
-    &--not-mine {
-      height: 3rem;
-      overflow-wrap: break-word;
-      font-size: 0.8em;
-      text-align: right;
-      color: $secondaryColor;
-      margin-bottom: 2.2rem;
-
-      @media (min-width: $sm) {
-        font-size: 1.1em;
+      &::before {
+        left: auto;
+        right: 1.1rem;
+        border-bottom-color: $eventColorBlue;
+        border-left: 15px solid transparent;
+        border-right: 0;
       }
-
-      // & .message-content {
-      //   background-color: $secondaryColor;
-      //   padding: .8rem;
-      //   border-radius: .8rem;
-      //   border: $eventColorBlue .2rem solid;
-      // }
     }
   }
 }
 
-// @keyframes grow {
-//   0% {
-//     transform: scale(0);
-//   }
+@keyframes grow {
+  0% {
+    transform: scale(0);
+  }
 
-//   100% {
-//     transform: scale(1);
-//   }
-// }
-
-// .message {
-//   overflow-wrap: break-word;
-//   color: $textColor;
-//   font-size: .8em;
-
-//   @media (min-width: $sm) {
-//     font-size: 1.2em;
-//   }
-
-//   &--not-mine {
-//     position: relative;
-//     color: $secondaryColor;
-//     left: 100px;
-
-//     @media (min-width: $sm) {
-//       left: 50%;
-//       font-size: 1.2em;
-//     }
-//   }
-
-//   }
-
-//   &-content {
-//     background-color: $primaryColorLight;
-//     padding: .8rem;
-//     border-radius: .8rem;
-//     display: block;
-//     position: relative;
-//     width: max-content;
-//     border: $eventColorBlue .2rem solid;
-
-//     @media (min-width: $sm) {
-//       width: 50%;
-//     }
-
-//     &::before {
-//       content: "";
-//       position: absolute;
-//       left: 2rem;
-//       bottom: 100%;
-//       border-bottom: 10px solid $eventColorBlue;
-//       border-right: 10px solid transparent;
-//     }
-//   }
-
-//   &--not-mine {}
-// }
+  100% {
+    transform: scale(1);
+  }
+}
